example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dracan-service
spec:
  selector:
    app: dracan
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
