example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <your_app_ingress_name>
spec:
  rules:
  - host: <your_app_url>  # Replace with your actual application URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dracan-service
            port:
              number: 5000
